FU-IRIB-088: Fix bad payslip label alignment

--- a/IRIB_Shared_Lib/static/css/custom_admin.css
+++ b/IRIB_Shared_Lib/static/css/custom_admin.css
@@ -412,3 +412,7 @@ div.payslip .header .column {
 .no-top {
     border-top: 0;
 }
+
+:lang(fa) #payslip_form .aligned .readonly {
+    margin-right: 60px;
+}
